--- a/references.bib
+++ b/references.bib
@@ -130,3 +130,28 @@
 	Bdsk-Url-1 = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1016/B978-0-12-179060-8.50007-4}}
 
+@article{Baguley2004,
+  author = {Baguley, Thom},
+  doi = {10.1016/j.apergo.2004.01.002},
+  journal = {Applied Ergonomics},
+  keywords = {Applied research,Experimental design,Statistical power},
+  number = {2},
+  pages = {73--80},
+  pmid = {15105068},
+  title = {{Understanding statistical power in the context of applied research}},
+  volume = {35},
+  year = {2004}
+}
+
+@article{Lenth2001,
+  author = {Lenth, Russel V},
+  doi = {10.1198/000313001317098149},
+  journal = {The American Statistician},
+  keywords = {cohen's effect measures,confidence-bounds,equivalence testing,observed power,power,retrospective power,study design},
+  number = {3},
+  pages = {187--193},
+  pmid = {170299300003},
+  title = {{Some practical guidelines for effective sample size determination}},
+  volume = {55},
+  year = {2001}
+}
