--- a/references.bib
+++ b/references.bib
@@ -155,3 +155,24 @@
   volume = {55},
   year = {2001}
 }
+
+@article{Baguley2009,
+  author = {Baguley, Thom},
+  doi = {10.1348/000712608X377117},
+  journal = {British journal of psychology},
+  number = {3},
+  pages = {603--617},
+  title = {{Standardized or simple effect size: what should be reported?}},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/19017432},
+  volume = {100},
+  year = {2009}
+}
+
+@book{APA2001,
+  author = {{American Psychological Association}},
+  edition = {5th Editio},
+  isbn = {1557987904},
+  pages = {400},
+  title = {{Publication Manual of the American Psychological Association}},
+  year = {2001}
+}
