clean up bibtex

--- a/references.bib
+++ b/references.bib
@@ -1,33 +1,21 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-
-%% Created for Chat at 2017-05-10 09:34:46 -0600 
-
-
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
 @article{Olejnik2003,
 	Author = {Stephen Olejnik and James Algina},
-	Date-Added = {2017-06-16 11:00:05 +0000},
-	Date-Modified = {2017-06-16 11:00:39 +0000},
 	Journal = {Psychological Methods},
 	Title = {Generalized eta and omega squared statistics: measures of effect size for some common research designs},
 	Year = {2003}}
 
 @article{Bakeman2005,
 	Author = {Roger Bakeman},
-	Date-Added = {2017-06-16 10:59:24 +0000},
-	Date-Modified = {2017-06-16 11:00:02 +0000},
 	Journal = {Behavior Research Methods},
 	Title = {Recommended effect size statistics for repeated measures designs},
 	Year = {2005}}
 
 @book{Rosenthal1991a,
 	Author = {Rosenthal, Robert},
-	Date-Added = {2017-05-10 15:18:14 +0000},
-	Date-Modified = {2017-05-10 15:18:19 +0000},
 	Publisher = {Sage},
 	Title = {Meta-analytic procedures for social research},
 	Volume = {6},
@@ -35,8 +23,6 @@
 
 @book{Cohen1988a,
 	Author = {Cohen, Jacob},
-	Date-Added = {2017-05-10 14:06:14 +0000},
-	Date-Modified = {2017-05-10 14:06:14 +0000},
 	Pages = {20--26},
 	Publisher = {Lawrence Earlbaum Associates},
 	Title = {Statistical power analysis for the behavioral sciences},
@@ -44,16 +30,12 @@
 
 @book{Cumming2013a,
 	Author = {Cumming, Geoff},
-	Date-Added = {2017-05-10 13:46:15 +0000},
-	Date-Modified = {2017-05-10 14:05:24 +0000},
 	Publisher = {Routledge},
 	Title = {Understanding the new statistics: Effect sizes, confidence intervals, and meta-analysis},
 	Year = {2013}}
 
 @article{Cumming2014a,
 	Author = {Geoff Cumming},
-	Date-Added = {2017-05-10 13:46:09 +0000},
-	Date-Modified = {2017-05-10 13:46:09 +0000},
 	Doi = {10.1177/0956797613504966},
 	Eprint = {http://dx.doi.org/10.1177/0956797613504966},
 	Journal = {Psychological Science},
@@ -68,8 +50,6 @@
 
 @article{Wilkinson1999a,
 	Author = {Wilkinson, Leland},
-	Date-Added = {2017-05-10 13:46:05 +0000},
-	Date-Modified = {2017-05-10 13:46:05 +0000},
 	Journal = {American psychologist},
 	Number = {8},
 	Pages = {594},
@@ -82,17 +62,13 @@
 	Author = {Cummings, Peter},
 	Doi = {10.1001/archpediatrics.2011.97},
 	Journal = {Archives of Pediatrics {\&} Adolescent Medicine},
-	Mendeley-Groups = {stats/effect sizes},
 	Month = {jul},
 	Number = {7},
 	Pages = {592},
-	Pmid = {21727271},
 	Title = {{Arguments for and Against Standardized Mean Differences (Effect Sizes)}},
 	Url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=21727271 http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
 	Volume = {165},
-	Year = {2011},
-	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve%7B%5C&%7Ddb=PubMed%7B%5C&%7Ddopt=Citation%7B%5C&%7Dlist%7B%5C_%7Duids=21727271%20http://archpedi.jamanetwork.com/article.aspx?doi=10.1001/archpediatrics.2011.97},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1001/archpediatrics.2011.97}}
+	Year = {2011}}
 
 @article{loftus1993picture,
   title={A picture is worth a thousandp values: On the irrelevance of hypothesis testing in the microcomputer age},
@@ -121,14 +97,11 @@
 	Booktitle = {Statistical Power Analysis for the Behavioral Sciences},
 	Doi = {10.1016/B978-0-12-179060-8.50007-4},
 	Edition = {Revised Ed},
-	Mendeley-Groups = {stats/effect sizes},
 	Pages = {19--74},
 	Publisher = {Academic Press},
 	Title = {{The t Test for Means}},
 	Url = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
-	Year = {1977},
-	Bdsk-Url-1 = {doi.org/10.1016/B978-0-12-179060-8.50007-4},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1016/B978-0-12-179060-8.50007-4}}
+	Year = {1977}}
 
 @article{Baguley2004,
   author = {Baguley, Thom},
@@ -150,7 +123,6 @@
   keywords = {cohen's effect measures,confidence-bounds,equivalence testing,observed power,power,retrospective power,study design},
   number = {3},
   pages = {187--193},
-  pmid = {170299300003},
   title = {{Some practical guidelines for effective sample size determination}},
   volume = {55},
   year = {2001}
