--- a/guides/effectsize.Rmd
+++ b/guides/effectsize.Rmd
@@ -8,7 +8,7 @@ knitr::include_graphics("figures/effectsize/teaser.png")
 
 **Version:** 1.0
 
-**Contributed to the writing:** Matthew Kay, Chat Wacharamanotham, Steve Haroz, Pierre Dragicevic
+**Contributed to the writing:** Matthew Kay, Chat Wacharamanotham, Steve Haroz, Pierre Dragicevic, Jacob O. Wobbrock
 
 **Gave feedback:** 
 
